# mqttui

./: Dockerfile  app.py  entrypoint.sh  pyproject.toml
.github/workflows/: docker-publish.yml
app/: __init__.py
app/static/: script.js
